# HOJA-ESP32-Baseband

./: .gitignore  CMakeLists.txt  README.md  manifest.json  notes.txt  sdkconfig  sdkconfig.bak  sdkconfig.old
main/: CMakeLists.txt  core_bt_ds4.c  core_bt_gamecube.c  core_bt_sinput.c  core_bt_switch.c  core_bt_xinput.c  imu_tool.c  interval.c  main.c  mitch_i2c.c  rsc_descriptors.c  switch_commands.c  switch_haptics.c  switch_spi.c  util_bt_hid.c
main/include/: core_bt_ds4.h  core_bt_gamecube.h  core_bt_sinput.h  core_bt_switch.h  core_bt_xinput.h  hoja.h  hoja_includes.h  hoja_types.h  imu_tool.h  interval.h  mitch_i2c.h  rsc_descriptors.h  util_bt_hid.h
main/include/switch/: switch_commands.h
